Fix sizing on mobiles.

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -17,12 +17,12 @@
 }
 
 .grid-layout--with-padding {
-  padding: 0 32px;
+  padding: 0 calc(32px + max(env(safe-area-inset-right), env(safe-area-inset-left)));
 }
 
 @media (max-width: 768px) {
   .grid-layout--with-padding {
-    padding: 0 20px;
+    padding: 0 calc(20px + max(env(safe-area-inset-right), env(safe-area-inset-left)));
   }
 }
 
